[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jose-hpke"
version = "0.1.0"
description = "A Python implementation of the draft-ietf-jose-hpke-encrypt-08 specification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.4",
    "hybrid-pke>=1.0.2",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
